--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,27 @@ p {
     background: #ffffffa3;
 }
 
+::selection {
+    background: #b1b1b199 !important; 
+   background-color: #b1b1b199 !important; 
+  color: #ffffff !important;
+}
+p::-moz-selection {
+    background: #b1b1b199 !important; 
+   background-color: #b1b1b199 !important;
+    color: #ffffff !important;
+}
+p::selection { 
+   background: #b1b1b199 !important; 
+   background-color: #b1b1b199 !important;
+    color: #ffffff !important;
+}
+::-moz-selection {
+    background: #b1b1b199 !important; 
+   background-color: #b1b1b199 !important;
+    color: #ffffff !important;
+}
+
 #navbar, #navbar-bg {
     height: 80px;
     width: 100%;
